[project]
name = "biosamples-mcp"
version = "0.1.0"
description = "MCP server for EMBL-EBI BioSamples search, retrieval, validation, and submission workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Dk Kumar" }
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "dependency-injector>=4.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
ignore_missing_imports = true
strict = false

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"